--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -10,7 +10,7 @@ block container
         include components/cards/card-3
         
         .cmp-slider-left
-          .inner
+          .inner-container
             h2.title-main-2.text-2.mt-5 Related product
             include components/carousel/slider-left-side
   .cmp-wrapper
