--- a/app/styles/structure.scss
+++ b/app/styles/structure.scss
@@ -4,7 +4,7 @@
   margin: 0 auto;
 }
 .cmp-slider-left {
-  // margin-left: calc(1130px/2 - 50%);
+  margin-left: calc(50% - 1130px/2);
 }
 .cmp-wrapper + .cmp-wrapper{
   margin-top: 50px;
