--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -21,9 +21,9 @@ $font-smaller: 1.3rem;
 
 
 // Color
-$color: #4e4e4e;
+$color: #383838;
 $color-1: rgba(0,0,0,0.6);
-$color-2: #383838;
+$color: #383838;
 $color-3: rgba(0,0,0,0.2);
 $color-4: #00C0F2;
 $color-5: #ed028c;
