--- a/app/styles/utilities/buttons.scss
+++ b/app/styles/utilities/buttons.scss
@@ -5,22 +5,69 @@ button:focus {
   @include border-radius($radius)
 }
 
-.btn-primary {
+.btn {
   font: bold $font-size-base 'Ubuntu',$font-family-base;
   line-height: 56px;
-  color: $color-2;
-  background: white;
-  padding: 0 30px;
   display: inline-block;
+  padding: 0 30px;
+  border: none;
   border-radius: 28px;
   transition: all 0.3s;
+
+  span {
+    display: inline-block;
+    vertical-align: middle;
+    &:first-child {
+      width: 23px;
+      height: 23px;
+      background-size: contain;
+      margin-right: 5px;
+    }
+  }
+
   &:hover {
     text-decoration: none;
-    background: white;
-    box-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
-    color: $color-2;
   }
 }
+.btn-white {
+  @extend .btn;
+  color: $color;
+  background: white;
+  &:hover {
+    color: white;
+    background: $color;
+    [class*='icon'] {
+      filter: invert(100%);
+    }
+  }
+  
+}
+
+.btn-primary {
+  @extend .btn;
+  color: white;
+  background: $color-5;
+  &:hover {
+    color: white;
+    @include gradient-y($color-5, lighten($color-5, 20%))
+  }
+}
+
+.btn-secondary {
+  @extend .btn;
+  color: $color;
+  background: white;
+  border: 1px solid rgba(0,0,0,0.1);
+  &:hover {
+    color: white;
+    background: $color;
+    border-color: $color;
+    [class*='icon'] {
+      filter: invert(100%);
+    }
+  }
+}
+
 .app-store {
   overflow: hidden;
   display: inline-block;
@@ -31,9 +78,9 @@ button:focus {
 
 }
 .group-inline {
-  > span, >a , >.button {
+  [class*='btn-'], .app-store {
     &:not(:first-child) {
-      margin-left: $grid-gutter-width;
+      margin-left: $grid-gutter-width/2;
     }
   }
 }
