--- a/app/views/index.pug
+++ b/app/views/index.pug
@@ -7,11 +7,12 @@ block vars
 
 block container
   .cmp-wrapper.has-bgd.bgd-1
-        include components/cards/card-3
-        
-        .cmp-slider-left
-            h2.title-main-2.text-2.mt-5 Related product
-            include components/carousel/slider-left-side
+    include components/cards/card-3
+    
+  .cmp-wrapper.has-bgd.bgd-1
+    .cmp-slider-left
+      h2.title-main-2.text-2.mb-5 Related product
+      include components/carousel/slider-left-side
   .cmp-wrapper
     include components/carousel/carousel-animation
   .cmp-wrapper
