--- a/app/views/mixins/cards.pug
+++ b/app/views/mixins/cards.pug
@@ -37,7 +37,25 @@ mixin card-3(src, title , content )
         .caption
           h2.title-main-3 #{title}
           .desc.mt-5 #{content}
-          +link('Request the document').btn-primary
+        .group-inline
+          +link('Request the document').btn-white
+      .col-sm-6
+        .thumb(style="background-image: url("+src+")")
+
+mixin card-3-style-2(src, title , content )
+  - if (typeof(src) === 'undefined') src = 'images/upload/photo-large-3.jpg'
+  - if (typeof(title) === 'undefined') title = 'No more to worry about requesting for tax deduction.'
+  - if (typeof(content) === 'undefined') content = 'Get the documents of personal income tax deductions From health insurance premiums From tax year 2018 onwards'
+
+  .inner-container
+    .row.no-gutters.card-3&attributes(attributes)
+      .col-sm-6
+        .caption
+          h2.title-main-3 #{title}
+          .desc.mt-5 #{content}
+        .group-inline
+          +link('Download').btn-primary(target="_blank")
+          +link-icon('icon-share', 'Share').btn-secondary
       .col-sm-6
         .thumb(style="background-image: url("+src+")")
 
