--- a/app/styles/libs/mixins/_text-truncate.scss
+++ b/app/styles/libs/mixins/_text-truncate.scss
@@ -6,3 +6,11 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+@mixin text-truncate-lines($n: 2) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: $n;
+}
