--- a/app/styles/style.scss
+++ b/app/styles/style.scss
@@ -2,6 +2,8 @@
 @import "libs/libs";
 @import "structure";
 @import "utilities";
+@import "blocks/nav";
+@import "blocks/header";
 @import "blocks/footer";
 @import "blocks/thumb";
 @import "blocks/tab";
