--- a/app/styles/utilities/title.scss
+++ b/app/styles/utilities/title.scss
@@ -15,6 +15,9 @@
 }
 .title-main-3 {
   font-size: 3.6rem;
+  @include media-breakpoint-down(sm){
+    font-size: 3rem;
+  }
 }
 
 .text-default {
@@ -38,7 +41,9 @@
 .text-pink {
   color: $color-5;
 }
-
+.text-amber {
+  color: $color-11;
+}
 .text-1 {
   color: $color-1;
 }
@@ -59,6 +64,15 @@
       display: inline-block;
       vertical-align: middle;
       margin: 0 5px;
+    }
+  }
+  &.bigger {
+    @extend .text-amber;
+    font-size: $font-medium;
+    span:not(:first-child){
+      &:before {
+        background: $color-11;
+      }
     }
   }
 }
