--- a/app/styles/utilities.scss
+++ b/app/styles/utilities.scss
@@ -1,4 +1,5 @@
 @import "utilities/icons";
 @import "utilities/title";
+@import "utilities/links";
 @import "utilities/buttons";
 @import "utilities/hamburger";
