--- a/app/styles/variables.scss
+++ b/app/styles/variables.scss
@@ -33,6 +33,8 @@ $color-8: #7fb3e0;
 $color-9:#E48DB4;
 $color-10: #2e2e79;
 $color-11: #ea8a2e;
+$color-12: #ffdd00;
+$color-13: #401aff;
 
 $bgd-default: $color-10;
 $bgd-1: #FAFAFA;
